--- a/Makefile1
+++ b/Makefile1
@@ -1,147 +1,69 @@
-# =========================
-# Name
-# =========================
-NAME = minishell
-#DEBUG_NAME	:= minishell_debug
+NAME        = minishell
+CC          = cc
+CFLAGS      = -Wall -Werror -Wextra
+DEBUG_FLAGS = -g -DVERBOSE=1
 
-# =========================
-# Compiler & Flags (42-compliant)
-# =========================
-CC      	:= cc
-CFLAGS  	:= -Wall -Wextra -Werror -MMD -MP
-LDFLAGS 	:= -lreadline
-DEBUG_FLAGS := -g -DVERBOSE=1
+LIBFT_DIR   = inc/libft
+LIBFT       = $(LIBFT_DIR)/libft.a
+
+INCLUDES    = -I inc -I $(LIBFT_DIR)
+EXT_LIBS    = -lreadline
+
+SRC_DIR     = src
+OBJ_DIR     = obj
+
+SRCS = \
+	main.c \
+	cleanup.c \
+	init_env.c \
+	utils.c \
+	verbose.c \
+	executor/landing_file.c \
+	executor/single_exec.c \
+	executor/child_cleanup.c \
+	executor/redirections.c \
 
 
-##VALGRIND := 
-#valgrind --leak-check=full --show-leak-kinds=all --suppressions=../readline.supp
 
-# =========================
-# Libft
-# =========================
-LIBFT_DIR       := inc/libft/
-LIBFT_A         := $(LIBFT_DIR)libft.a
+# baue aus z.B. "executor/landing_file.c" -> "obj/executor/landing_file.o"
+OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.c=.o))
 
-SRC = src
-# =========================
-# Sources
-# =========================
-# Separate main sources
-MAIN_SOURCE_MAND  := $(SRC_DIR)/main.c
-#MAIN_SOURCE_BONUS := src/main_bonus.c
+# ==========================
+# Build rules
+# ==========================
 
-# Mandatory sources
-SRCS = $(SRC_DIR)/init_env.c \
-	$(SRC_DIR)/cleanup.c \
-	$(SRC_DIR)/verbose.c \
-	$(SRC_DIR)/utils.c \
+all: $(LIBFT) $(NAME)
 
-# Bonus-only sources
-SOURCES_BONUSONLY := \
-	src/main_bonus.c
+# Debug-Build: CFLAGS erweitern und komplett neu bauen
+debug: CFLAGS += $(DEBUG_FLAGS)
+debug: re
 
-##BONUS FILES
+# Objektdateien
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c inc/minishell.h
+	@mkdir -p $(dir $@)
+	@$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
 
-# =========================
-# Fixed object paths
-# =========================
-OBJS = $(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
-#OBJS        := objects/
-#OBJ_DIR_BONUS       := objects_bonus/
+# Executable
+$(NAME): $(OBJS)
+	@$(CC) $(CFLAGS) $(OBJS) $(LIBFT) $(EXT_LIBS) -o $(NAME)
 
-# Build corresponding object paths from separate main sources
-MAIN_OBJECT_MAND    := $(addprefix $(OBJS),$(MAIN_SOURCE_MAND:.c=.o))
-#MAIN_OBJECT_BONUS   := $(addprefix $(OBJ_DIR_BONUS),$(MAIN_SOURCE_BONUS:.c=.o))
-
-OBJECTS_MAND_ALL    := $(addprefix $(OBJS),$(SOURCES_CORE:.c=.o))
-OBJECTS_MAND_NOFORK := $(filter-out $(OBJS)pipe_and_fork.o,$(OBJECTS_MAND_ALL))
-#OBJECT_BONUS_ONLY   := $(addprefix $(OBJ_DIR_BONUS),$(SOURCES_BONUSONLY:.c=.o))
-
-HEADERS             := inc/minishell.h
-
-# =========================
-# Build mode (mandatory / bonus)
-# =========================
-MODE ?= mandatory
-
-ifeq ($(MODE),bonus)
-# Bonus mode: main_bonus.c in objects_bonus/ + mandatory (without pipe_and_fork.o) + bonus-only objects
-MAIN_OBJECT := $(MAIN_OBJECT_BONUS)
-OBJECTS     := $(OBJECTS_MAND_NOFORK) $(OBJECT_BONUS_ONLY)
-else
-# Mandatory mode: main.c in objects/ + all mandatory objects
-MAIN_OBJECT := $(MAIN_OBJECT_MAND)
-OBJECTS     := $(OBJECTS_MAND_ALL)
-endif
-
-DEPS := $(MAIN_OBJECT:.o=.d) $(OBJECTS:.o=.d)
-
-# =========================
-# Default target
-# =========================
-all: $(LIBFT_A) $(NAME)
-
-debug: fclean
-	$(MAKE) CFLAGS="$(CFLAGS) $(DEBUG_FLAGS)"
-
-# =========================
-# Libft build rule
-# =========================
-$(LIBFT_A):
+# Libft bauen
+$(LIBFT):
 	@$(MAKE) -C $(LIBFT_DIR) all
 
-#$(DEBUG_NAME): $(MAIN_OBJECT) $(OBJECTS)
-#	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS) $(LIBFT_A)
+# ==========================
+# Clean rules
+# ==========================
 
-# =========================
-# Link: program (no unnecessary relinking)
-# =========================
-$(NAME): $(MAIN_OBJECT) $(OBJECTS)
-	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS) $(LIBFT_A)
-
-
-# =========================
-# Compile rules
-# =========================
-# Mandatory objects in objects/
-$(OBJS)%.o: %.c $(HEADERS) | $(OBJS)
-	$(CC) $(CFLAGS) -c $< -o $@
-
-# Bonus objects in objects_bonus/
-#$(OBJ_DIR_BONUS)%.o: %.c $(HEADERS) | $(OBJ_DIR_BONUS)
-#	$(CC) $(CFLAGS) -c $< -o $@
-
-# =========================
-# Create object directories
-# =========================
-$(OBJS):
-	mkdir -p $(OBJS)
-
-#$(OBJ_DIR_BONUS):
-#	mkdir -p $(OBJ_DIR_BONUS)
-
-# =========================
-# Bonus target (delegates to Make so it checks up-to-date status)
-# =========================
-bonus:
-	$(MAKE) MODE=bonus all
-
-# =========================
-# Clean targets
-# =========================
 clean:
-	rm -rf $(OBJS)
+	@rm -f $(OBJS)
+	@$(MAKE) -C $(LIBFT_DIR) clean
 
 fclean: clean
-	rm -f $(NAME)
+	@rm -f $(NAME)
+	@rm -rf $(OBJ_DIR)
+	@$(MAKE) -C $(LIBFT_DIR) fclean
 
 re: fclean all
 
-# Include automatically generated dependency files
--include $(DEPS)
-
-# =========================
-# Phony
-# =========================
-.PHONY: all clean fclean re bonus debug
-# .SILENT:
+.PHONY: all debug clean fclean re
