some extra not neccessery files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ minishell_debug
 .vscode
 src/lexer/Makefile
 src/lexer/tests/
+src/parser/Makefile
+src/parser/lexer/
+src/parser/readline.supp
+src/parser/tests/
+readline.supp
