--- a/inc/libft/Makefile
+++ b/inc/libft/Makefile
@@ -42,6 +42,8 @@ SRC := \
 	ft_strncmp.c \
 	ft_strchr.c \
 	ft_strrchr.c \
+	ft_strcpy.c \
+	ft_strncpy.c \
 	ft_strnstr.c \
 	ft_strdup.c \
 	ft_strjoin.c \
@@ -78,6 +80,7 @@ SRC := \
 	ft_lstclear_bonus.c \
 	ft_lstiter_bonus.c \
 	ft_lstlast_bonus.c \
+	ft_strcat.c \
 	ft_lstmap_bonus.c \
 	ft_lstsize_bonus.c \
 	gnl/get_next_line.c \
